--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -145,7 +145,7 @@ end
           <%= link_to raw("<i class=\"fa fa-sign-in fa-5x\"></i>"), new_usuario_session_path%>
         </li>
         <li class="text-center">
-          <a href="#">INICIE SESION PARA ACCEDER AL SISTEMA.</a>
+          <a href="#">INICIE SESIÓN PARA ACCEDER AL SISTEMA.</a>
 
         </li>
 
