registros, tabla concepto

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -119,7 +119,7 @@ end
           <ul class="nav nav-second-level">
             <% if can? :read, Registro %>
             <li>
-              <%= link_to raw("<i class=\"fa fa-eye fa-fw\"></i>REGISTROS"), registros_path%>
+              <%= link_to raw("<i class=\"fa fa-book fa-fw\"></i>REGISTROS"), registros_path%>
             </li>
             <%end%>
             <% if can? :read, Usuario %>
