--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,8 @@
     <title>FUNSONE nominas</title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-<link rel="shortcut icon" href="assets/favicon.png">
+    <%=favicon_link_tag 'favicon.png', rel: 'shortcut icon', type: 'image/png'%>
+
     <%= csrf_meta_tags %>
   </head>
   <body>
