--- a/app/views/registros/index.html.erb
+++ b/app/views/registros/index.html.erb
@@ -4,7 +4,7 @@
     <%= link_to " Limpiar todos los registros", registro_path(0),class: "btn btn-danger fa fa-trash", method: :delete, data: { confirm: 'Esta seguro?' } %>
     <%end%>
   </div>
-  <h1>Registros</h1>
+  <h1><i class="fa fa-book"></i> Registros</h1>
 </div>
 <div class="row">
   <div class="col-md-12">
