--- a/app/views/conceptospersonales/_conceptopersonal.html.erb
+++ b/app/views/conceptospersonales/_conceptopersonal.html.erb
@@ -5,7 +5,7 @@
     <%if Conceptopersonal.all.where(tipo_de_concepto:x).length>0%>
     <div class="panel-body">
         <div class="table-responsive text-center">
-            <table class="table table-bordered table-condensed table-responsive table-bordered">
+              <table class="table  table-condensed table-hover table-responsive table-bordered ">
                 <thead>
                     <tr>
                         <th class="actions">Nombre</th>
