--- a/app/views/departamentos/index.html.erb
+++ b/app/views/departamentos/index.html.erb
@@ -9,8 +9,8 @@
   <li class="list-group-item text-center ">
     <%if Departamento.all.length>0%>
     <div class="table-responsive">
-      <table class="table table-bordered table-condensed table-responsive table-bordered">
-        <thead>
+          <table class="table table-hover table-bordered table-condensed table-striped">
+            <thead>
           <tr>
             <th class= "actions" ><%=t("nombre")%></th>
             <th class= "actions" >Dependencia</th>
