--- a/app/views/cargos/_cargo.html.erb
+++ b/app/views/cargos/_cargo.html.erb
@@ -2,7 +2,8 @@
 <%if p.length>0%>
 
   <div class="table-responsive">
-    <table class="table table-bordered table-condensed table-responsive table-bordered">
+        <table class="table table-hover table-bordered table-condensed table-striped">
+          
       <thead>
         <tr>
           <th class="actions">Nombre</th>
