--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-3">
     <div class="panel panel-primary text-center no-boder bg-color-red">
       <div class="panel-body">
-        <i class="fa fa-building fa-5x"></i>
+        <i class="fa fa-building-o fa-5x"></i>
         <h3><%= Dependencia.all.length%></h3>
       </div>
       <div class="panel-footer back-footer-red">
@@ -24,7 +24,10 @@
   <div class="col-md-3">
     <div class="panel panel-primary text-center no-boder bg-color-red">
       <div class="panel-body">
-        <i class="fa fa-list fa-5x"></i>
+        <span class="fa-stack  fa-fw," style="font-size: 2.5em;">
+            <i class="fa fa-user fa-stack-2x" style="color:white;"></i>
+            <i class="fa fa-money fa-stack-1x" style="color:grey; margin-top:0.5em; margin-left:0.3em;"></i>
+          </span>
         <h3><%= Tipo.all.length%></h3>
       </div>
       <div class="panel-footer back-footer-red">
