--- a/app/views/registros/_registros.html.erb
+++ b/app/views/registros/_registros.html.erb
@@ -11,7 +11,7 @@
     <th class="actions">Clase</th>
     <th class="actions">Elemento</th>
     <th class="actions">Autor</th>
-    <th class="actions">Acciones</th>
+    <th class="actions">Cambios</th>
 
   </tr>
 </thead>
